# swap_sol_move

./: Anchor.toml  README.md  img.txt  package-lock.json  package.json  token.json  token.txt  tsconfig.json
app/: createToken.ts  createTokenAccount.ts  mint.ts  privateKeyArray.json  requestAirdrop.ts  wallet.ts
programs/swap_sol_move/: Cargo.toml
programs/swap_sol_move/src/: lib.rs
tests/: swap_sol_move.ts
